test/scc/ext/tm/semantic-errors/004.a
004.t:1:11: error: volatile parameter cannot appear in _Transaction_safe function